--- a/bin/chatbox/chatbox.fxml
+++ b/bin/chatbox/chatbox.fxml
@@ -3,15 +3,17 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ChatPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatbox.ChatController">
+<AnchorPane fx:id="ChatPane" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatbox.ChatController">
    <children>
       <ListView fx:id="MainListView" layoutY="286.0" prefHeight="837.0" prefWidth="353.0" />
       <ListView prefHeight="234.0" prefWidth="353.0" style="-fx-border-color: #c3cbd8;" />
@@ -26,14 +28,19 @@
          </font></JFXButton>
       <MaterialDesignIconView fill="#1b8ff5" glyphName="ACCOUNT" layoutX="203.0" layoutY="89.0" size="25.0" text="" />
       <MaterialDesignIconView fill="#1b8ff5" glyphName="ACCOUNT" layoutX="11.0" layoutY="269.0" size="25.0" text="" wrappingWidth="25.000023692846298" />
-      <AnchorPane layoutX="353.0" prefHeight="1123.0" prefWidth="1567.0" style="-fx-background-color: #e2f2ff; -fx-border-color: #8e949e;">
+      <AnchorPane fx:id="messageAnchorPane" layoutX="353.0" prefHeight="1123.0" prefWidth="1567.0" style="-fx-background-color: #e2f2ff; -fx-border-color: #8e949e;" visible="false">
          <children>
+            <Hyperlink fx:id="loadOldMessagesLink" layoutX="110.0" layoutY="81.0" text="Load old messages...">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
             <JFXButton fx:id="SendButton" layoutX="1332.0" layoutY="959.0" onAction="#sendMessage" prefHeight="48.0" prefWidth="75.0" style="-fx-background-color: #1b8ff5;" text="Send">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
             </JFXButton>
-            <TextArea fx:id="MessagesTextArea" layoutX="110.0" layoutY="94.0" prefHeight="818.0" prefWidth="1297.0" style="-fx-border-color: #e5e5e5; -fx-border-radius: 5;" />
+            <Pane fx:id="MessagePane" layoutX="110.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1300.0" />
             <JFXButton fx:id="ExitButton" layoutX="1488.0" layoutY="30.0" onAction="#Exit" prefHeight="48.0" prefWidth="49.0" text="Exit" />
             <JFXTextArea fx:id="TypeChatTextField" layoutX="110.0" layoutY="959.0" prefHeight="48.0" prefWidth="1139.0" />
          </children>
@@ -55,5 +62,6 @@
       </JFXButton>
       <VBox fx:id="ListVBox" layoutY="286.0" prefHeight="837.0" prefWidth="353.0" spacing="10.0">
       </VBox>
+      <Button fx:id="newButton" layoutX="405.0" layoutY="30.0" mnemonicParsing="false" text="New" />
    </children>
 </AnchorPane>
