--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -25,8 +25,8 @@
          <font>
             <Font size="14.0" />
          </font></Hyperlink>
-      <JFXTextField fx:id="LoginUsernameTextField" layoutX="937.0" layoutY="488.0" prefHeight="38.0" prefWidth="277.0" promptText="Enter your email" />
-      <JFXPasswordField fx:id="LoginPasswordField" layoutX="937.0" layoutY="578.0" prefHeight="38.0" prefWidth="277.0" promptText="Enter your password" />
+      <JFXTextField fx:id="LoginUsernameTextField" layoutX="937.0" layoutY="488.0" prefHeight="38.0" prefWidth="277.0" promptText="Enter your email" text="may@gmail.com" />
+      <JFXPasswordField fx:id="LoginPasswordField" layoutX="937.0" layoutY="578.0" prefHeight="38.0" prefWidth="277.0" promptText="Enter your password" text="123" />
       <JFXCheckBox fx:id="RememberMeCheckbox" layoutX="937.0" layoutY="687.0" text="Remember me">
          <font>
             <Font size="13.0" />
