--- a/bin/chatbox/chatbox.fxml
+++ b/bin/chatbox/chatbox.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -15,7 +14,6 @@
 
 <AnchorPane fx:id="ChatPane" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatbox.ChatController">
    <children>
-      <ListView fx:id="MainListView" layoutY="286.0" prefHeight="837.0" prefWidth="353.0" />
       <ListView prefHeight="234.0" prefWidth="353.0" style="-fx-border-color: #c3cbd8;" />
       <ImageView fx:id="MyProfileImage" fitHeight="100.0" fitWidth="100.0" layoutX="37.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="MyNameLabel" layoutX="45.0" layoutY="158.0" prefHeight="25.0" prefWidth="102.0" text="username">
@@ -30,6 +28,7 @@
       <MaterialDesignIconView fill="#1b8ff5" glyphName="ACCOUNT" layoutX="11.0" layoutY="269.0" size="25.0" text="" wrappingWidth="25.000023692846298" />
       <AnchorPane fx:id="messageAnchorPane" layoutX="353.0" prefHeight="1123.0" prefWidth="1567.0" style="-fx-background-color: #e2f2ff; -fx-border-color: #8e949e;" visible="false">
          <children>
+            <JFXButton fx:id="CloseButton" layoutX="1510.0" layoutY="19.0" onAction="#Exit" prefHeight="48.0" prefWidth="49.0" text="Exit" />
             <Hyperlink fx:id="loadOldMessagesLink" layoutX="110.0" layoutY="81.0" text="Load old messages...">
                <font>
                   <Font size="14.0" />
@@ -41,7 +40,6 @@
                </font>
             </JFXButton>
             <Pane fx:id="MessagePane" layoutX="110.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1300.0" />
-            <JFXButton fx:id="ExitButton" layoutX="1488.0" layoutY="30.0" onAction="#Exit" prefHeight="48.0" prefWidth="49.0" text="Exit" />
             <JFXTextArea fx:id="TypeChatTextField" layoutX="110.0" layoutY="959.0" prefHeight="48.0" prefWidth="1139.0" />
          </children>
       </AnchorPane>
@@ -55,13 +53,12 @@
             <Font size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutY="234.0" prefHeight="52.0" prefWidth="115.0" style="-fx-border-color: #c3cbd8;" text="      Chat List">
+      <JFXButton fx:id="ChatListButton" layoutY="234.0" prefHeight="52.0" prefWidth="115.0" style="-fx-border-color: #c3cbd8;" text="      Chat List">
          <font>
             <Font size="13.0" />
          </font>
       </JFXButton>
-      <VBox fx:id="ListVBox" layoutY="286.0" prefHeight="837.0" prefWidth="353.0" spacing="10.0">
+      <VBox fx:id="ListVBox" layoutY="286.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="837.0" prefWidth="353.0" spacing="10.0">
       </VBox>
-      <Button fx:id="newButton" layoutX="405.0" layoutY="30.0" mnemonicParsing="false" text="New" />
    </children>
 </AnchorPane>
