--- a/bin/myProfile/myProfile.fxml
+++ b/bin/myProfile/myProfile.fxml
@@ -67,5 +67,6 @@
             </font>
         </JFXButton>
       <JFXButton fx:id="ExitButton" layoutX="1847.0" layoutY="24.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="." />
+      <JFXButton fx:id="SignOutButton" layoutX="1842.0" layoutY="1024.0" onAction="#signOut" prefHeight="50.0" prefWidth="50.0" text="." />
     </children>
 </AnchorPane>
